# protein-lab

./: .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
skills/collab-feishu/: SKILL.md
skills/experiment/: SKILL.md
skills/knowledge-base/: SKILL.md
skills/knowledge-base/scripts/: knowledge_base.py
skills/local-rounds/: SKILL.md
skills/local-rounds/scripts/: init_round.py
skills/protein-lab-afserver-interpretation/: SKILL.md
skills/protein-lab-afserver-workflows/: SKILL.md
skills/protein-lab-candidate-refinement/: SKILL.md
skills/protein-lab-experiment-design/: SKILL.md
skills/protein-lab-feishu-workflow/: SKILL.md
skills/protein-lab-reporting-postmortem/: SKILL.md
skills/protein-lab-round-management/: SKILL.md
skills/protein-lab-round-management/scripts/: init_round.py
skills/protein-lab-tool-execution/: SKILL.md
skills/protein-lab-workflow-router/: SKILL.md
skills/reporting/: SKILL.md
skills/research-experiment-automation/: SKILL.md
skills/setup/: SKILL.md
skills/setup/scripts/: protein_lab_setup.py
skills/skill-curator/: SKILL.md
skills/task-intake/: SKILL.md
skills/tool-af-server/: SKILL.md
skills/tool-creator/: SKILL.md
skills/tool-modal/: SKILL.md
skills/tool-tamarind-api/: SKILL.md
skills/tool-tamarind-pepmlm/: SKILL.md
tests/: conftest.py  test_afserver_audit.py  test_init_round.py  test_inspect_pepmlm_result.py  test_knowledge_base.py  test_prepare_pepmlm_payload.py  test_setup.py  test_skill_curator.py  test_tamarind_api.py  test_tool_creator.py
(+12 files in other folders)
