[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-lab-plugin"
version = "0.4.2"
description = "Local Codex plugin scripts and tests for Protein Lab."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

# This project ships scripts under skills/, not an importable Python package.
# Declaring no modules / no packages prevents setuptools from auto-discovering
# tests/ or skills/ and failing the `pip install -e ".[test]"` flow.
[tool.setuptools]
py-modules = []
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
